--- a/TwitterNLP.ipynb
+++ b/TwitterNLP.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "fE59mVVw07YG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46b0f016-8d5c-4dc0-c9d2-bc67dc2db062"
+        "outputId": "482de829-2731-4d05-a2b5-00e2801451bd"
       },
       "outputs": [
         {
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -81,7 +81,7 @@
         },
         "collapsed": true,
         "id": "SKcu8aqW2OnG",
-        "outputId": "6b1f5762-6707-4cf8-d872-6e36e6030c5f"
+        "outputId": "2e73a49f-4500-46b5-cdc7-43eeed0fc873"
       },
       "outputs": [
         {
@@ -139,9 +139,9 @@
           "height": 241
         },
         "id": "Nsdk3Bdhfif0",
-        "outputId": "bbc87cd7-9878-4bdd-bcba-ce1e1fdd3bb5"
+        "outputId": "9e6908ae-45b3-4f90-f463-53fae747eebc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,7 +203,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 25
         }
       ]
     },
@@ -233,9 +233,9 @@
           "height": 241
         },
         "id": "sLHb8OT3hchw",
-        "outputId": "2ee354f9-552b-425e-a960-536e63589aae"
+        "outputId": "07ee9975-6ebc-4332-ac2a-ef9b7939998b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 26
         }
       ]
     },
@@ -325,9 +325,9 @@
           "height": 241
         },
         "id": "i00HUoj6u7AV",
-        "outputId": "31fff876-ccd6-44ce-978f-158af3c91a58"
+        "outputId": "761e60a3-307f-4437-cf03-ba483ef319e3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -389,7 +389,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 27
         }
       ]
     },
@@ -408,9 +408,9 @@
           "height": 241
         },
         "id": "nrwKoDqJyXKT",
-        "outputId": "643c0587-771e-4039-e072-2117e97061fa"
+        "outputId": "64ae81ce-4841-440c-b4a7-e0d9b90230f2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 28
         }
       ]
     },
@@ -491,9 +491,9 @@
           "height": 241
         },
         "id": "VbC9HT9J0iSl",
-        "outputId": "68d0edf2-2bf2-49e0-884d-35e6e4ce3df0"
+        "outputId": "5354196e-66c2-4cc3-9156-ad0cec435536"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,15 +555,247 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 29
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Stemmer - pulling words out by the stem\n",
+        "#The basic root of the word\n",
+        "\n",
+        "st = nltk.PorterStemmer()\n",
+        "def stemming_on_text(data):\n",
+        "    text = [st.stem(word) for word in data]\n",
+        "    return data\n",
+        "dataset['text']= dataset['text'].apply(lambda x: stemming_on_text(x))\n",
+        "dataset['text'].head()"
+      ],
       "metadata": {
-        "id": "BdTpXffP0zag"
+        "id": "BdTpXffP0zag",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        },
+        "outputId": "45fb6156-0e78-43a2-9f92-35a5fcf76c08"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "800000                    love healthuandpets u guys r best\n",
+              "800001    im meeting one besties tonight cant wait  girl...\n",
+              "800002    darealsunisakim thanks twitter add sunisa got ...\n",
+              "800003    sick really cheap hurts much eat real food plu...\n",
+              "800004                        lovesbrooklyn effect everyone\n",
+              "Name: text, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>800000</th>\n",
+              "      <td>love healthuandpets u guys r best</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800001</th>\n",
+              "      <td>im meeting one besties tonight cant wait  girl...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800002</th>\n",
+              "      <td>darealsunisakim thanks twitter add sunisa got ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800003</th>\n",
+              "      <td>sick really cheap hurts much eat real food plu...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800004</th>\n",
+              "      <td>lovesbrooklyn effect everyone</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Lemmatizer - makes lemons\n",
+        "#Reduces words to their lemma, the essence of the word\n",
+        "\n",
+        "lm = nltk.WordNetLemmatizer()\n",
+        "def lemmatizer_on_text(data):\n",
+        "    text = [lm.lemmatize(word) for word in data]\n",
+        "    return data\n",
+        "dataset['text'] = dataset['text'].apply(lambda x: lemmatizer_on_text(x))\n",
+        "dataset['text'].head()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        },
+        "id": "ZEjjgpKrmIf-",
+        "outputId": "46e95eb3-ad6a-4b4a-9ed9-82a2f4221188"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "800000                    love healthuandpets u guys r best\n",
+              "800001    im meeting one besties tonight cant wait  girl...\n",
+              "800002    darealsunisakim thanks twitter add sunisa got ...\n",
+              "800003    sick really cheap hurts much eat real food plu...\n",
+              "800004                        lovesbrooklyn effect everyone\n",
+              "Name: text, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>800000</th>\n",
+              "      <td>love healthuandpets u guys r best</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800001</th>\n",
+              "      <td>im meeting one besties tonight cant wait  girl...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800002</th>\n",
+              "      <td>darealsunisakim thanks twitter add sunisa got ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800003</th>\n",
+              "      <td>sick really cheap hurts much eat real food plu...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>800004</th>\n",
+              "      <td>lovesbrooklyn effect everyone</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Splitting up data for validation and training\n",
+        "X_Train, X_Test, y_train, y_test = train_test_split(dataset['text'], dataset['sentiment'], test_size=0.25, random_state=1124)"
+      ],
+      "metadata": {
+        "id": "pf22n1J0s-Wq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Fitting the TFID Vectorizer\n",
+        "vectoriser = TfidfVectorizer(ngram_range=(1,2), max_features=500000)\n",
+        "vectoriser.fit(X_train)\n",
+        "print('No. of feature_words: ', len(vectoriser.get_feature_names()))"
+      ],
+      "metadata": {
+        "id": "J1FAEOU5-sQM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using vectorizer data\n",
+        "X_train = vectoriser.transform(X_train)\n",
+        "X_test  = vectoriser.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "MhEOXZ3x_DRO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Evaluate the model and see if it works!\n",
+        "def model_Evaluate(model):\n",
+        "    # Predict values for Test dataset\n",
+        "    y_pred = model.predict(X_test)\n",
+        "    # Print the evaluation metrics for the dataset.\n",
+        "    print(classification_report(y_test, y_pred))\n",
+        "\n",
+        "    cf_matrix = confusion_matrix(y_test, y_pred)\n",
+        "    categories = ['Negative','Positive']\n",
+        "    group_names = ['True Neg','False Pos', 'False Neg','True Pos']\n",
+        "    group_percentages = ['{0:.2%}'.format(value) for value in cf_matrix.flatten() / np.sum(cf_matrix)]\n",
+        "    labels = [f'{v1}\\n{v2}' for v1, v2 in zip(group_names,group_percentages)]\n",
+        "    labels = np.asarray(labels).reshape(2,2)\n",
+        "    sns.heatmap(cf_matrix, annot = labels, cmap = 'Blues',fmt = '',\n",
+        "    xticklabels = categories, yticklabels = categories)\n",
+        "    plt.xlabel(\"Predicted values\", fontdict = {'size':14}, labelpad = 10)\n",
+        "    plt.ylabel(\"Actual values\" , fontdict = {'size':14}, labelpad = 10)\n",
+        "    plt.title (\"Confusion Matrix\", fontdict = {'size':18}, pad = 20)"
+      ],
+      "metadata": {
+        "id": "iq_jWYMN_N1Q"
       },
       "execution_count": null,
       "outputs": []
@@ -573,7 +805,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1ViSeujczZGeTdEQK-htrQ3mc1vMzk0xS",
-      "authorship_tag": "ABX9TyPHVd59gNi6e8GqG9vmaA/Y",
+      "authorship_tag": "ABX9TyNlHch1EGoTLEM9eL2OoU2u",
       "include_colab_link": true
     },
     "kernelspec": {
