--- a/TwitterNLP.ipynb
+++ b/TwitterNLP.ipynb
@@ -48,6 +48,8 @@
         "#preprocessing\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics import roc_curve, auc\n",
+        "\n",
         "\n",
         "#nltk\n",
         "import nltk\n",
@@ -62,6 +64,7 @@
         "from sklearn.svm import LinearSVC\n",
         "from sklearn.naive_bayes import BernoulliNB\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.gaussian_process import GaussianProcessClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "from sklearn.metrics import confusion_matrix, classification_report\n",
@@ -483,7 +486,7 @@
         "def cleaning_numbers(data):\n",
         "    return re.sub('[0-9]+', '', data)\n",
         "dataset['text'] = dataset['text'].apply(lambda x: cleaning_numbers(x))\n",
-        "dataset['text'].tail()\n"
+        "dataset['text'].tail()"
       ],
       "metadata": {
         "colab": {
@@ -657,7 +660,7 @@
         "    text = [lm.lemmatize(word) for word in data]\n",
         "    return data\n",
         "dataset['text'] = dataset['text'].apply(lambda x: lemmatizer_on_text(x))\n",
-        "dataset['text'].head()\n"
+        "dataset['text'].head()"
       ],
       "metadata": {
         "colab": {
@@ -799,13 +802,157 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Boilerplate Bernoulli Naive Bayes classifier\n",
+        "BNBmodel = BernoulliNB()\n",
+        "BNBmodel.fit(X_train, y_train)\n",
+        "model_Evaluate(BNBmodel)\n",
+        "y_pred1 = BNBmodel.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "nzg2gfzQCni2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fpr, tpr, thresholds = roc_curve(y_test, y_pred1)\n",
+        "roc_auc = auc(fpr, tpr)\n",
+        "plt.figure()\n",
+        "plt.plot(fpr, tpr, color='darkorange', lw=1, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+        "plt.xlim([0.0, 1.0])\n",
+        "plt.ylim([0.0, 1.05])\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.title('ROC CURVE')\n",
+        "plt.legend(loc=\"lower right\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "i2jTszSuDfj3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Boilerplate Logistic Regression\n",
+        "LRmodel = LogisticRegression(solver='lbfgs')\n",
+        "LRmodel.fit(X_train, y_train)\n",
+        "model_Evaluate(LRmodel)\n",
+        "y_pred2 = LRmodel.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "CSwi7WHaDMM8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fpr, tpr, thresholds = roc_curve(y_test, y_pred2)\n",
+        "roc_auc = auc(fpr, tpr)\n",
+        "plt.figure()\n",
+        "plt.plot(fpr, tpr, color='darkorange', lw=1, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+        "plt.xlim([0.0, 1.0])\n",
+        "plt.ylim([0.0, 1.05])\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.title('ROC CURVE')\n",
+        "plt.legend(loc=\"lower right\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "yWSg1ab6DgGt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Fancier Logistic Regression\n",
+        "LRmodel_f = LogisticRegression(solver='liblinear', C=10, max_iter = 1000, n_jobs=-1)\n",
+        "LRmodel_f.fit(X_train, y_train)\n",
+        "model_Evaluate(LRmodel_f)\n",
+        "y_pred3 = LRmodel_f.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "B3dHXvtDDgtz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fpr, tpr, thresholds = roc_curve(y_test, y_pred2)\n",
+        "roc_auc = auc(fpr, tpr)\n",
+        "plt.figure()\n",
+        "plt.plot(fpr, tpr, color='darkorange', lw=1, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+        "plt.xlim([0.0, 1.0])\n",
+        "plt.ylim([0.0, 1.05])\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.title('ROC CURVE')\n",
+        "plt.legend(loc=\"lower right\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Sk3imZJED9lE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Gaussian Naive Bayes classifier\n",
+        "GNBmodel = GaussianNB()\n",
+        "GNBmodel.fit(X_train.todense(), y_train)\n",
+        "model_Evaluate(GNBmodel)\n",
+        "y_pred4 = GNBmodel.predict(X_test.todense())"
+      ],
+      "metadata": {
+        "id": "uR_D0QV-D97b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fpr, tpr, thresholds = roc_curve(y_test, y_pred2)\n",
+        "roc_auc = auc(fpr, tpr)\n",
+        "plt.figure()\n",
+        "plt.plot(fpr, tpr, color='darkorange', lw=1, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+        "plt.xlim([0.0, 1.0])\n",
+        "plt.ylim([0.0, 1.05])\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.title('ROC CURVE')\n",
+        "plt.legend(loc=\"lower right\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "dDHbpa3LFOkf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1ViSeujczZGeTdEQK-htrQ3mc1vMzk0xS",
-      "authorship_tag": "ABX9TyNlHch1EGoTLEM9eL2OoU2u",
+      "authorship_tag": "ABX9TyMP9zwobzAyaiqH1x7HNP8F",
       "include_colab_link": true
     },
     "kernelspec": {
